--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "moongoose": "^0.0.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.21"
+    "nodemon": "^2.0.21",
+    "socket.io": "^4.6.1"
   },
   "scripts": {
     "start": "node server.js",
