--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "moongoose": "^0.0.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.21",
     "socket.io": "^4.6.1"
   },
